k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-app
spec:
  type: ClusterIP
  selector:
    app: tomcat-app
  ports:
    - port: 80
      targetPort: 8080
